--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -7,7 +7,7 @@
    justify-content: center;
    align-items: center;
   width: 900px;
-  margin: auto;
+  margin:1em auto;
    background-color: vars.$color-popup-background;
    box-sizing: border-box;
    
@@ -23,12 +23,10 @@
 
   }
   .popular-scenarios-container {
-    width: 650px;
-    height: 400px;
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+   
     // background-color: yellow;
     margin:5px;
     padding-top:10px;
@@ -37,10 +35,11 @@
     
 
     .popular-scenarios-scenario {
-      width: 300px;
-      height: 200px;
+      width: 200px;
+      height: 250px;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      align-items: center;
       box-shadow: 5px 5px 5px rgb(165, 159, 159);
       transition: all 0.5s ease;
       cursor: pointer;
@@ -61,6 +60,16 @@
        width: 150px;
        height: 150px;
 
+     }
+     .popular-scenarios-scenario-rate ul{
+       display: flex;
+       
+     }
+     .--gold {
+      color: yellow;
+     }
+     .scenario-star{
+       color: black;
      }
      &:hover {
        transform: scale(1.2);
