--- a/src/components/Scenarios/scenarios.scss
+++ b/src/components/Scenarios/scenarios.scss
@@ -1,63 +1,105 @@
 @use 'src/styles/vars';
 
-.scenarios-main{
+@font-face {
+  src: url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2")
+    format("woff2");
+  font-family: "Meta";
+  font-style: normal;
+  font-weight: normal;
+}
+
+.scenarios-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 900px;
+  margin: 1em auto;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  position:absolute;
-   top:28%;
-   width: 50%;
-   height: 80%;
-   padding:10px;
-   margin-left: 25%;
-   
-   .scenarios-describe {
-    margin-top:10px;
-    padding-left:10px;
-    width: 600px;
-    height: 200px;
-  }
+  border-bottom: 20px solid vars.$color-title-last;
+  border-right: 10px solid vars.$color-title-last;
 
-  .scenarios-container {
-    width: 650px;
-    height: 400px;
+  .scenarios-list {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    //background-color: yellow;
-    margin:5px;
-    padding-top:10px;
-    padding-bottom:10px;
-    box-sizing: border-box;
+    margin: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
-    .scenarios-map {
-      width: 300px;
-      height: 200px;
+    .scenarios-scenario {
+      width: 400px;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      align-items: center;
       box-shadow: 5px 5px 5px rgb(165, 159, 159);
       transition: all 0.5s ease;
       cursor: pointer;
-     .scenarios-image {
-       width: 150px;
-       height: 150px;
 
+      .scenarios-image {
+        max-width: 250px;
+        max-height: 250px;
+        margin:5px;
+      }
+
+      .scenarios-title {
+        font-family: "Meta";
+        font-size: 2rem;
+        text-align: center;
+        color: vars.$color-title-first;
+        font-variation-settings: "wght"900, "ital"1;
+        padding-bottom: 10px;
+        margin: 2px;
+        text-transform: uppercase;
+      } 
+      .scenarios-subtitle {
+        font-family: "Meta";
+        font-variation-settings: "wght" 900, "ital" 1;
+        color:red;
+        padding-bottom:10px;
+        margin:2px;
+      }
+
+      .scenarios-comment {
+        font-family: 'Quicksand', sans-serif;
+        padding-left: 50px;
+        padding-right: 50px;
+        font-style: italic;
+        margin: 2px;
+        font-size: 12px;
+        width: 300px;
+        color:black;
+      }
+
+      .scenarios-text {
+        font-family: 'Quicksand', sans-serif;
+        border: none;
+        padding: 5px;
+        padding-top: 10px;
+        text-align: justify;
+        margin: 2px;
+        box-sizing: border-box;
+        width: 300px;
+        color:black;
+      }
+
+      .scenarios-rate ul {
+        display: flex;
+        padding-bottom:10px;
+      }
+
+      .--gold {
+        color: yellow;
+      }
+
+      .scenario-star {
+        color: black;
+      }
+
+      &:hover {
+        transform: scale(1.2);
+      }
     }
-
-    .scenarios-title {
-     
-
-    }
-
-    .scenarios-comment {
-   
-
-    }
-    
-  }
   }
 }
