--- a/src/components/Game/Waiting/waiting.scss
+++ b/src/components/Game/Waiting/waiting.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars';
 
 
-$cube-size: 25; 
+$cube-size: 20; 
 $animation-duration: 3.7s;
 $easing: cubic-bezier(0.645, 0.045, 0.355, 1);
 $base-matrix: matrix(0.9, 0.5, 0, 1, 0, 0);
@@ -16,7 +16,7 @@ $base-matrix: matrix(0.9, 0.5, 0, 1, 0, 0);
   justify-content: flex-start;
   box-sizing: border-box;
   position:absolute;
-   top:33%;
+   top:10%;
    right:auto;
    bottom:auto;
    width: 700px;
@@ -25,6 +25,7 @@ $base-matrix: matrix(0.9, 0.5, 0, 1, 0, 0);
    margin:2px;
    border-radius: 5% 5% 0 0;
    border-bottom: 45px solid vars.$color-title-first ;  
+   z-index:0;
 }
 
 .waiting-title {
@@ -202,5 +203,4 @@ $radial-map: (
   }
 }
 
-html {background-color: #262626;}
-html, body {height: 100%;overflow: hidden;}
+
