--- a/src/components/Popup/signin.scss
+++ b/src/components/Popup/signin.scss
@@ -23,7 +23,7 @@
     color: white;
     padding: 5px;
     width: 300px;
-    height: 200px;
+    height: 230px;
     border-radius: 10%;
     border-bottom: 10px solid vars.$color-title-five;
     border-right: 10px solid vars.$color-title-five;
@@ -56,12 +56,21 @@
       margin-top: 15px;
       margin-bottom: 10px;
       color: black;
+      padding-bottom:2px;
 
       .signin-field {
         border: none;
         color: black;
         margin-bottom: 5px;
         margin-top: 10px;
+      }
+
+      .signin-password-info {
+        font-size: 12px;
+        font-style: italic;
+        padding-top:2px;
+        padding-bottom:2px;
+
       }
 
       .signin-button {
