--- a/back/templates/base.html.twig
+++ b/back/templates/base.html.twig
@@ -23,7 +23,7 @@
 
     {% include 'back/include/_nav.html.twig' %}
 
-    <body class="background" {% if app.request.get('_route') is same as 'app_login' %}style="overflow: hidden"{% endif %}>
+    <body class="background" {% if app.request.get('_route') is same as 'app_login' or app.request.get('_route') is same as 'app_forgot_password_request' or app.request.get('_route') is same as 'app_check_email' or app.request.get('_route') is same as 'app_reset_password' %}style="overflow: hidden"{% endif %}>
         {% include 'back/include/_star.html.twig' %}
             <div class="container">
                 <div class="row">
