--- a/src/components/Popup/updatePassword.scss
+++ b/src/components/Popup/updatePassword.scss
@@ -34,7 +34,7 @@
       position: absolute;
       background-color: vars.$color-background;
       padding: 1.5px 7px;
-      left: 50%;
+      left: 49.5%;
       margin-top: -15px;
       border-radius: 50%;
       border: 2px solid vars.$color-popup-background;
@@ -79,6 +79,13 @@
         font-variation-settings: "wght"900;
         font-family: "Meta";
         background-color: #11ffee00;
+      }
+
+      .signin-password-info {
+        font-size: 12px;
+        font-style: italic;
+        padding-top:2px;
+        padding-bottom:2px;
       }
     }
   }
