--- a/back/templates/security/login.html.twig
+++ b/back/templates/security/login.html.twig
@@ -46,7 +46,7 @@
                         Vous avez oublié votre mot de passe ?
                     </button>
                 </form> #}
-                <a class="mt-3" href="http://localhost:8000/reset-password">Mot de passe oublié ?</a>
+                <a class="mt-3" href="http://3.238.70.10/reset-password">Mot de passe oublié ?</a>
         </div>
     </div>
 </div>
